public interface PagoFactura {
    void pagar();
    
}
