public class PersonalAseo implements Limpieza{
    @Override
    public void limpiar(){
        System.out.println("Personal de Aseo limpiando Pasillo 9");
    }
}
