public interface Retiro {
    void retirar();    
}
