public class Tecnico implements Reparacion{
    @Override
    public void reparar(){
        System.out.println("El tecnico esta reparando.......");
    } 
}
